<resources>
    <string name="app_name">Вместе</string>
    <string name="your_email">Ваш Email</string>
    <string name="yours_pass">Ваш пароль</string>
    <string name="Cant_remember">Не помню</string>
    <string name="Enter">Войти</string>
    <string name="no_acc_q">Нет аккаунта?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="yours_pass_repeat">Подтверждение пароля</string>
    <string name="Argree_with_policy">Согласен с политикой конфиденциальности</string>
    <string name="logo">Логотип</string>
    <string name="recover">Восстановить</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_map">Карта</string>
    <string name="title_account">Мой профиль</string>
    <string name="title_chat">Чат</string>
    <string name="search">Поиск</string>
    <string name="name">Имя</string>
    <string name="edit">Изменить</string>
    <string name="settings">Настройки</string>
    <string name="email">Email</string>
    <string name="about_self">О себе</string>
    <string name="active_events">Активные мероприятия</string>
    <string name="login">Авторизоваться</string>
    <string name="exit">Выйти</string>
    <string name="save">Сохранить</string>
    <string name="title_edit_account">Изменить профиль</string>
    <string name="users_avatar">Пользовательский аватар</string>
    <string name="message">Сообщение</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="address_icon">Иконка адреса</string>
    <string name="header">Заголовок</string>
    <string name="description">Описание</string>
    <string name="address">Адрес</string>
    <string name="whenEnds">К какому времени выполнить</string>
    <string name="add_event">Создать мероприятие</string>
    <string name="check_completed">Отметить выполненным</string>
    <string name="cancel">Отменить</string>
    <string name="avatar">Аватар отправителя</string>
    <string name="help">Помочь</string>
    <string name="wrongEmailPass">Введены неверные почта и/или пароль</string>
    <string name="city">Город</string>
    <string name="pass">Пароль</string>
    <string name="second_name">Фамилия</string>
    <string name="my_events">Мои мероприятия</string>
    <string name="old_pass">Предыдущий пароль</string>
    <string name="new_pass">Новый пароль</string>
    <string name="edit_email">Изменить email</string>
    <string name="edit_pass">Изменить пароль</string>
    <string name="delete">Удалить</string>
    <string name="title_chat_list">Список диалогов</string>

    <string-array name="cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
    </string-array>
</resources>
