<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.register.RegisterFragment"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/editAcc_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        app:title="Редактировать профиль"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/editAcc_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/editAcc_avatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_launcher_foreground"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAcc_edit_name_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/second_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAcc_edit_name_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/city">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAcc_edit__city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/about_self">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAcc_edit_about_self"
                    style="@style/AboutTextInput"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editAcc_btn_edit_email"
                style="@style/Button.Red"
                android:text="@string/edit_email"
                android:layout_marginTop="16dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editAcc_btn_edit_password"
                style="@style/Button.Red"
                android:text="@string/edit_pass"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editAcc_btn_save"
                style="@style/Button"
                android:text="@string/save"/>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>