<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.login.loginFragment.LoginFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/account_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Мой профиль"/>


        <ImageView
            android:id="@+id/account_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_launcher_foreground"
            android:visibility="gone"/>

        <RatingBar
            android:id="@+id/account_rating"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:isIndicator="true"
            android:layout_marginTop="16dp"/>

        <TextView
            style="@style/Profile.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:id="@+id/account_text_name"
            style="@style/Profile.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Иванов Иван" />

        <TextView
            style="@style/Profile.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <TextView
            android:id="@+id/account_text_email"
            style="@style/Profile.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="email@email.com" />

        <TextView
            style="@style/Profile.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city" />

        <TextView
            android:id="@+id/account_text_city"
            style="@style/Profile.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Санкт-Петербург" />

        <TextView
            style="@style/Profile.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_self" />

        <TextView
            android:id="@+id/account_text_about"
            style="@style/Profile.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Всегда хотел помогать людям, и вот, помогаю." />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/account_btn_events_active"
            android:text="@string/active_events"
            android:layout_marginTop="16dp"
            style="@style/Button"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/account_btn_events_mine"
            android:text="@string/mine_events"
            style="@style/Button"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/account_btn_exit"
            android:text="@string/exit"
            style="@style/Button.Red"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>