<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.loginFragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <ImageView
            android:layout_width="196dp"
            android:layout_height="196dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:hint="@string/your_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/yours_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/login_text_cant_remember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cant_remember"
                android:textSize="16sp"
                android:gravity="end"
                android:textColor="@color/colorBlue"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn_enter"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:text="@string/Enter" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_marginBottom="24dp"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="@id/login_text_no_acc"
            app:layout_constraintBottom_toBottomOf="@id/login_text_no_acc"/>

        <TextView
            android:id="@+id/login_text_no_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_acc_q"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn_register"
            android:layout_gravity="bottom"
            android:layout_marginTop="8dp"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_text_no_acc"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            style="@style/Button.Blue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>