<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.register.RegisterFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/addEvent_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_cancel_black_24dp"
        app:title="Создать событие" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/header"
            style="@style/TextInputLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addEvent_edit_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/description"
            style="@style/TextInputLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addEvent_edit_description"
                style="@style/AboutTextInput" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/address"
            style="@style/TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addEvent_edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_edit_location_black_24dp"
                android:drawablePadding="8dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/whenEnds"
            style="@style/TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addEvent_edit_whenEnds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:drawableStart="@drawable/ic_timer_black_24dp"
                android:drawablePadding="8dp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addEvent_btn_save"
        android:text="@string/save"
        style="@style/Button"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

</LinearLayout>